# Chat-Application

./: .gitignore  README.md
Messenger/: Adaptor.cpp  Adaptor.h  AppEngine.cpp  AppEngine.h  CMakeLists.txt  ChatModel.cpp  ChatModel.h  Main.qml  Person.cpp  Person.h  PersonModel.cpp  PersonModel.h  PersonModelcpp  PersonModelh  TcpClient.cpp  TcpClient.h  TcpServer.cpp  UserProfile.cpp  UserProfile.h  main.cpp
Messenger/Contacts/: ContactViews.qml
Messenger/Contacts/Components/: ContactDelegate.qml  Header.qml
Messenger/JsonData/: abc.json  hoangvi.json  ngochuy.json  persons.json
Messenger/LoginChat/: LoginChat.qml
Messenger/OpenedChat/: OpenedChatView.qml
Messenger/OpenedChat/Components/: ChatBubble.qml  Icon.qml  IconButton.qml
